<resources>
    <string name="app_name">YBS Way</string>
    <string name="nav_home_page_title">ပင်မစာမျက်နှာ</string>
    <string name="nav_language_setting_page_title">ဘာသာစကား</string>
    <string name="nav_bus_list_title">ယာဉ်လိုင်းများ</string>
    <string name="nav_about_title">အကြောင်း</string>
    <string name="bus_list_title">ယာဉ်လိုင်းများ</string>
    <string name="language_setting_title">ဘာသာစကား</string>
    <string name="toolbar_back_button_description">နောက်သို့</string>
    <string name="nav_header_sub_title">ybsway@gmail.com</string>
    <string name="ybs_data_loading_message">အချက်အလက်များတင်သွင်းနေပါသည်။</string>
    <string name="search_location_input_hint_1">မှတ်တိုင်ရှာမည်</string>
    <string name="search_location_input_hint_2">မှတ်တိုင် လမ်း မြို့နယ်</string>
    <string name="search_location_input_hint_3">လှည်းတန်း အင်းစိန်လမ်း ကမာရွတ် </string>
    <string name="app_about_title">အကြောင်း</string>
    <string name="app_about_body">YBS Way သည် ရန်ကုန် ဘတ်စ်စနစ်အတွက် လမ်းကြောင်းရှာဖွေရေး အပ်ပလီကေးရှင်းလေးတစ်ခု ဖြစ်သည်။ ဤအပ်ပလီကေးရှင်းသည် အသုံးပြုသူများအတွက် ရန်ကုန်ရှိ အမြန်ဆုံးနှင့် အဆင်ပြေနိုင်ဆုံး ဘတ်စ်လမ်းကြောင်းများကို ရှာဖွေရာတွင် ကူညီပေးနိုင်ပါသည်။</string>
    <string name="app_developer_title">ရေးဆွဲသူ</string>
    <string name="app_developer_body">ခွန်ပြည့်ဖြိုးအောင်</string>

    <string name="location_permission_required_title">တည်နေရာခွင့်ပြုချက်လိုအပ်သည်။</string>
    <string name="location_permission_required_message">ဤအပ်ပလီကေးရှင်းတွင် တည်နေရာ ခွင့်ပြုချက်လိုအပ်ပါသည်။ ခွင့်ပြုရန် အပ်လီကေးရှင်းဆက်တင်ကို ဖွင့်ချင်ပါသလား?</string>
    <string name="location_permission_required_confirm">လုပ်မည်</string>
    <string name="location_permission_required_deny">မလုပ်တော့ပါ</string>

    <string name="gps_prompt_error_title">မမျှော်လင့်ထားသော အမှား</string>
    <string name="gps_prompt_error_message">GPS ဆက်တင်ကို ဖွင့်၍ မရပါ။ ဆက်တင်တွင် GPS ကို ဖွင့်ပါ။</string>
    <string name="gps_prompt_error_action">ပိတ်မည်</string>

    <string name="btn_close_text">ပိတ်မည်</string>

    <string name="bottom_sheet_bus_stop_list_title">မှတ်တိုင်များ</string>

    <string name="clear_search_history_confirm_title">အတည်ပြုရန်</string>
    <string name="clear_search_history_confirm_message">ရှာဖွေမှုမှတ်တမ်းအားလုံးကိုဖျက်ချင်ပါသလား?</string>
    <string name="clear_search_history_confirm_negative_message">မလုပ်တော့ပါ</string>
    <string name="clear_search_history_confirm_positive_message">ဖျက်မည်</string>

    <string name="search_history_title">ရှာဖွေထားသော</string>

    <string name="search_result_title">ရှာဖွေမှုရလဒ်များ</string>
    <string name="search_result_no_bus_stop">မှတ်တိုင်ရှာမတွေ့ပါ။</string>
    <string name="search_result_no_bus">ယာဉ်လိုင်းရှာမတွေ့ပါ။</string>

    <string name="bus_search_input_hint_1">ယာဉ်လိုင်းရှာမည်</string>
    <string name="bus_search_input_hint_2">၁၄၅</string>
    <string name="bus_search_input_hint_3">လေဆိပ်</string>
    <string name="bus_search_input_hint_4">ဆူးလေ မှော်ဘီ</string>
</resources>