<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_primary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/nav_about_title"
            android:background="@color/primary"
            android:elevation="20dp"
            app:titleMarginStart="@dimen/toolbar_title_margin_start"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:navigationIcon="@drawable/toolbar_back_arrow"
            app:navigationContentDescription="@string/toolbar_back_button_description"
            app:layout_constraintTop_toTopOf="parent">
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/tool_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <LinearLayout
                    android:id="@+id/app_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="@dimen/about_page_icon_size"
                        android:layout_height="@dimen/about_page_icon_size"
                        android:src="@drawable/ic_launcher_round" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/AppFont"
                        android:text="@string/app_name"
                        android:textSize="@dimen/about_page_app_name_size"
                        android:textStyle="bold"
                        android:textColor="@color/about_page_app_name_color"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/AppFont"
                        android:text="@string/app_version"
                        android:textSize="@dimen/about_page_app_version_size"
                        android:textColor="@color/about_page_app_version_color"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/about_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/AppFont"
                        android:textStyle="bold"
                        android:text="@string/app_about_title"
                        android:textSize="@dimen/about_page_content_title_size"
                        android:textColor="@color/about_page_content_title_color"/>

                    <TextView
                        android:id="@+id/about_body_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:lineSpacingExtra="2dp"
                        android:textAppearance="@style/AppFont"
                        android:text="@string/app_about_body"
                        android:textSize="@dimen/about_page_content_body_size"
                        android:textColor="@color/about_page_content_body_color"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/AppFont"
                        android:textStyle="bold"
                        android:text="@string/app_developer_title"
                        android:textSize="@dimen/about_page_content_title_size"
                        android:textColor="@color/about_page_content_title_color"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:lineSpacingExtra="2dp"
                        android:textAppearance="@style/AppFont"
                        android:text="@string/app_developer_body"
                        android:textSize="@dimen/about_page_content_body_size"
                        android:textColor="@color/about_page_content_body_color"/>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>