<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/bus_list_title"
            android:background="@color/primary"
            android:elevation="20dp"
            app:titleMarginStart="@dimen/toolbar_title_margin_start"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:navigationIcon="@drawable/toolbar_back_arrow"
            app:navigationContentDescription="@string/toolbar_back_button_description"
            app:layout_constraintTop_toTopOf="parent">
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/bus_search_input_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:paddingHorizontal="10dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tool_bar"
            android:background="@color/primary">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/search_location_input_height"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@drawable/search_input_outline_states" >

                <ImageView
                    android:layout_width="@dimen/search_location_input_icon_size"
                    android:layout_height="@dimen/search_location_input_icon_size"
                    android:scaleType="fitCenter"
                    android:src="@drawable/search_bus_input_icon" />

                <EditText
                    android:id="@+id/bus_search_input"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/AppFont"
                    android:textSize="@dimen/search_location_input_text_size"
                    android:hint="@string/bus_search_input_hint_1"
                    android:maxLength="100"
                    android:inputType="text|textNoSuggestions"
                    android:background="@drawable/search_edit_text_shape"
                    style="@style/editText.location.outline"
                    android:textCursorDrawable="@drawable/search_input_cursor"
                    android:autofillHints="Source" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_clear_search"
                    android:layout_width="@dimen/search_location_input_delete_icon_size"
                    android:layout_height="@dimen/search_location_input_delete_icon_size"
                    android:background="@drawable/delete_text_button_bg_states"
                    android:scaleType="fitXY"
                    android:src="@drawable/delete_text_icon"/>

            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bus_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/bus_list_divider_height"
            android:background="@color/background_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bus_search_input_wrapper"
            app:layout_constraintVertical_bias="0.0">
        </androidx.recyclerview.widget.RecyclerView>

        <FrameLayout
            android:id="@+id/no_bus_found_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/bus_search_input_wrapper"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/background_primary"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/search_result_no_bus"
                android:textSize="@dimen/search_result_no_result_text"
                android:textColor="@color/search_result_no_result_text"
                android:textAppearance="@style/AppFont"/>
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>