<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".activity.ActivityMain">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false">

        <org.osmdroid.views.MapView
            android:id="@+id/map_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <LinearLayout
            android:id="@+id/loading_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/screen_loading_container_background"
            android:gravity="start|center_vertical"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/search_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ProgressBar
                android:layout_width="@dimen/screen_loading_icon_size"
                android:layout_height="@dimen/screen_loading_icon_size"
                android:indeterminateDrawable="@drawable/loading_white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/ybs_data_loading_message"
                android:textColor="@color/screen_loading_message"
                android:textSize="@dimen/screen_loading_message_size"
                android:textAppearance="@style/AppFont"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="@dimen/floating_button_container_margin_bottom"
            android:layout_marginEnd="@dimen/floating_button_margin_end"
            app:layout_constraintEnd_toEndOf="@id/map_view"
            app:layout_constraintBottom_toBottomOf="@id/map_view">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/zoom_btn_group_bg"
                android:padding="@dimen/btn_zoom_group_padding"
                android:elevation="10dp"
                android:layout_marginBottom="@dimen/floating_button_margin_bottom">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_zoom_in"
                    android:layout_width="@dimen/btn_zoom_size"
                    android:layout_height="@dimen/btn_zoom_size"
                    android:background="@drawable/btn_zoom_in_bg_states"
                    android:src="@drawable/icon_btn_zoom_in"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_zoom_out"
                    android:layout_width="@dimen/btn_zoom_size"
                    android:layout_height="@dimen/btn_zoom_size"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/btn_zoom_out_bg_states"
                    android:src="@drawable/icon_btn_zoom_out"/>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_gps"
                android:layout_width="@dimen/floating_button_size"
                android:layout_height="@dimen/floating_button_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:elevation="10dp"
                android:background="@drawable/gps_button_background_states"
                android:scaleType="fitXY"
                android:src="@drawable/gps_button_icon_states"/>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:elevation="15dp"
            android:background="@color/background_primary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:elevation="5dp"
                android:background="@color/search_result_bg"
                android:layout_marginTop="@dimen/search_list_margin_top">

                <LinearLayout
                    android:id="@+id/bus_stop_history_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:background="@color/search_history_bg">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/search_history_title_bar_height"
                        android:background="@color/search_history_title_bar_bg"
                        android:elevation="1dp"
                        android:paddingVertical="10dp"
                        android:paddingHorizontal="20dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/search_history_title"
                            android:textColor="@color/search_history_title"
                            android:textSize="@dimen/search_history_title"
                            android:textAppearance="@style/AppFont"
                            android:gravity="center_vertical"
                            android:layout_gravity="start|center_vertical" />

                        <androidx.appcompat.widget.AppCompatImageButton
                            android:id="@+id/btn_clear_bus_stop_search_history"
                            android:layout_width="@dimen/search_history_clear_btn_size"
                            android:layout_height="@dimen/search_history_clear_btn_size"
                            android:background="@drawable/clear_history_btn_bg_states"
                            android:scaleType="fitXY"
                            android:padding="6dp"
                            android:src="@drawable/clear_search_history_icon"
                            android:layout_gravity="end|center_vertical"/>

                    </FrameLayout>

                    <ListView
                        android:id="@+id/bus_stop_search_history_list_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:dividerHeight="1dp"
                        android:clipToPadding="false"
                        android:paddingTop="1dp"
                        android:paddingBottom="2dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bus_stop_result_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_gravity="center"
                    android:background="@color/search_result_bg"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/search_result_title_bar_height"
                        android:background="@color/search_result_title_bar_bg"
                        android:elevation="1dp"
                        android:paddingVertical="10dp"
                        android:paddingHorizontal="20dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_bus_stop_search_result_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/search_result_title"
                            android:textColor="@color/search_result_title"
                            android:textSize="@dimen/search_result_title"
                            android:textAppearance="@style/AppFont"
                            android:gravity="start|center_vertical"
                            android:layout_gravity="start|center_vertical" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_no_bus_stop_found"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/search_result_no_bus_stop"
                            android:textColor="@color/search_result_no_result_text"
                            android:textSize="@dimen/search_result_no_result_text"
                            android:textAppearance="@style/AppFont"
                            android:gravity="center"
                            android:layout_gravity="center" />

                    </FrameLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/bus_stop_result_rc"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clipToPadding="false"
                        android:paddingTop="1dp"
                        android:paddingBottom="10dp" />

                </LinearLayout>

            </FrameLayout>



            <ImageView
                android:id="@+id/iv_not_found"
                android:layout_width="@dimen/bus_stop_list_not_found_icon_size"
                android:layout_height="@dimen/bus_stop_list_not_found_icon_size"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/bus_stop_not_found_icon"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/search_bar_height"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp"
            android:elevation="20dp"
            android:background="@drawable/search_bar_background"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_nav_toggle"
                android:layout_width="@dimen/search_location_input_height"
                android:layout_height="@dimen/search_location_input_height"
                android:background="@drawable/nav_toggle_bg_states"
                android:scaleType="fitXY"
                android:layout_marginEnd="5dp"
                android:src="@drawable/burger_menu_vector"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/search_location_input_height"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="@drawable/search_location_input_outline_states" >

                    <ImageView
                        android:layout_width="@dimen/search_location_input_icon_size"
                        android:layout_height="@dimen/search_location_input_icon_size"
                        android:scaleType="fitCenter"
                        android:src="@drawable/search_location_input_icon" />

                    <EditText
                        android:id="@+id/bus_stop_input"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginStart="5dp"
                        android:gravity="center_vertical"
                        android:textAppearance="@style/AppFont"
                        android:textSize="@dimen/search_location_input_text_size"
                        android:maxLength="100"
                        android:inputType="text|textNoSuggestions"
                        android:background="@drawable/search_location_edit_text_shape"
                        style="@style/editText.location.outline"
                        android:textCursorDrawable="@drawable/search_location_input_cursor"
                        android:autofillHints="Source" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/btn_clear_search"
                        android:layout_width="@dimen/search_location_input_delete_icon_size"
                        android:layout_height="@dimen/search_location_input_delete_icon_size"
                        android:background="@drawable/delete_text_button_bg_states"
                        android:scaleType="fitXY"
                        android:src="@drawable/delete_text_icon"/>

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_search_route"
                    android:layout_width="@dimen/search_location_input_height"
                    android:layout_height="@dimen/search_location_input_height"
                    android:background="@drawable/direction_button_states"
                    android:scaleType="fitXY"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/direction_vector"/>


            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        android:background="@color/background_primary"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        app:itemTextAppearance="@style/AppFont"
        app:itemRippleColor="@color/nav_item_background"
        app:itemShapeFillColor="@color/nav_item_background"
        app:itemIconTint="@color/primary"
        app:itemTextColor="@color/primary"/>

</androidx.drawerlayout.widget.DrawerLayout>